--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
+    "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@supabase/supabase-js": "^2.57.4",
-    "lucide-react": "^0.344.0"
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
-    "vite": "^5.4.2",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.9.1",
-    "tailwindcss": "^3.4.17",
     "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21"
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.2"
   },
   "engines": {
     "node": "22.x"
