--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
@@ -21,7 +22,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.9.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.18",
     "vite": "^5.4.2"
   },
   "engines": {
