--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.9.1",
     "postcss": "^8.5.6",
+    "rollup": "^4.52.3",
     "tailwindcss": "^3.4.18",
     "vite": "^5.4.2"
   },
